--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,87 @@
-*,
-html,
+* {
+  margin: 0;
+  padding: 0;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  background-color: #111;
 }
 
-.slider-wrap {
-    width: 500px;
-    overflow: hidden;
+.slider-container {
+  width: 800px;
+  height: 400px;
+  border: 4px solid #888;
+  margin: 2rem auto;
+  overflow: hidden;
+  position: relative;
+}
+.slider-container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: all 0.5s ease;
+  z-index: 1;
+}
+.slider-container img.active {
+  opacity: 1;
 }
 
-.slider-wrap ul {
-    width: 10000px;
-    display: flex;
-    transition: 1s;
-    transform: translateX(0px);
+.slider-control {
+  width: 800px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
 }
-
-.slider-wrap li img {
-    width: 500px;
+.slider-control .btn {
+  border: none;
+  outline: none;
+  width: 20%;
+  padding: 0.5rem 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  background-color: rgb(3, 104, 117);
+  color: #eee;
+  cursor: pointer;
+  transition: all 0.5s ease;
 }
-
-slider-btn {
-    border: 2px solid black;
-    border-radius: 20%;
+.slider-control .btn.disable {
+  opacity: 0.3;
+  cursor: no-drop;
+}
+.slider-control .btn.disable:hover {
+  background-color: rgb(3, 104, 117);
+}
+.slider-control .btn:hover {
+  background-color: rgb(41, 155, 184);
+}
+.slider-control .indecators {
+  width: 60%;
+  padding: 0 5rem;
+}
+.slider-control .indecators ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+}
+.slider-control .indecators ul li {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(3, 104, 117);
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+.slider-control .indecators ul li.active {
+  background-color: rgb(41, 155, 184);
+  border: 2px solid #eee;
+  transform: scale(1.2);
 }
